<?xml version="1.0" encoding="utf-8"?>
<resources>
<!-- TEXTO DE LOS LOGOTIPOS -->
    <string name="app_name">Punto Jalisco Abierto</string>
    <string name="app_login">Gracias por registrarte</string>
    <string name="logo_jalisco">Jalisco Gobierno del Estado</string>
    <string name="logo_bienestar">Bienestar Jalisco</string>
    <string name="logo_secretaria">Secretaria de Innovacion Ciencia y Tecnologia</string>
    <string name="logo_coecytjal">COECYTJAL</string>
    <string name="R1">Bueno</string>
    <string name="R2">Regular</string>
    <string name="R3">Malo</string>
    
    <string name="hello_world">Hello world!</string>
    <string name="btrefresh">Actualizar</string>
    <string name="btrutas">Rutas</string>
    <string name="btconf">Conf</string>
    <string name="gpsoptions">Opciones de GPS.</string>
    <string name="gperror">El GPS no esta activo. Quieres ir a las configuraciones?</string>
    <string name="setting">Configuraciones</string>
    <string name="cancel">Cancelar</string>
    <string name="ruta">RUTA</string>
    <string name="ruta_preferente">Default</string>
    <string name="base">Base</string>
    <string name="salida1">1er Salida</string>
    <string name="salidan">Ultima Salida</string>
    <string name="duracion">Duracion de la Vuelta</string>    
    <string name="vacio"> </string>    
    <string name="spinner_title">Seleccione una ruta</string>
    <string name="toast_ruta_seleccionada">: es ahora default</string>
    <!-- login dialog layout -->    
    <string name="leyendaregistro">Registrate para seguir navegando en internet</string>
    <string name="namelabel">Nombre</string>
    <string name="borndatelabel">Fecha de nacimiento</string>
    <string name="sexlabel">Sexo</string>
    <string name="hombrelabel">Hombre</string>
    <string name="mujerlabel">Mujer</string>
    <string name="phonelabel">Teléfono</string>
    <string name="maillabel">Email</string>
    
    <string name="namehint">coloca tu nombre</string>
    <string name="borndatedayhint">dia</string>
    <string name="borndatemonthhint">mes</string>
    <string name="borndateyearhhint">año</string>
    <string name="phonehint">coloca tu teléfono</string>
    <string name="mailhint">coloca tu correo electronico</string>
    <string name="funciones">funciones</string>
    <string name="registrar">registrame</string>
    
    <!-- end login dialog layout -->
    <!-- texto de prueba para diseño -->    
    <string name="debujbase">Av. Periferico 385</string>
    <string name="debujsalida1">05:50 am</string>
    <string name="debujsalidan">09:50 pm</string>
    <string name="debujduracion">02:05 hrs</string>
    
    <!-- el spiners -->
    <string-array name="spinner_dia">
		<item>día</item>
		<item>01</item>
		<item>02</item>
		<item>03</item>
		<item>04</item>
		<item>05</item>
		<item>06</item>
		<item>07</item>
		<item>08</item>
		<item>09</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
		<item>13</item>
		<item>14</item>
		<item>15</item>
		<item>16</item>
		<item>17</item>
		<item>18</item>
		<item>19</item>
		<item>20</item>
		<item>21</item>
		<item>22</item>
		<item>23</item>
		<item>24</item>
		<item>25</item>
		<item>26</item>
		<item>27</item>
		<item>28</item>
		<item>29</item>
		<item>31</item>
		<item>31</item>
	</string-array>
	
    
    <string-array name="spinner_mes">
		<item>mes</item>
		<item>01</item>
		<item>02</item>
		<item>03</item>
		<item>04</item>
		<item>05</item>
		<item>06</item>
		<item>07</item>
		<item>08</item>
		<item>09</item>
		<item>10</item>
		<item>11</item>
		<item>12</item>
	</string-array>
	
    <string-array name="spinner_ano">
		<item>año</item>
		<item>2015</item>
		<item>2014</item>
		<item>2013</item>
		<item>2012</item>
		<item>2011</item>
		<item>2010</item>
		<item>2009</item>
		<item>2008</item>
		<item>2007</item>
		<item>2006</item>
		<item>2005</item>
		<item>2004</item>
		<item>2003</item>
		<item>2002</item>
		<item>2001</item>
		<item>2000</item>
		<item>1999</item>
		<item>1998</item>
		<item>1997</item>
		<item>1996</item>
		<item>1995</item>
		<item>1994</item>
		<item>1993</item>
		<item>1992</item>
		<item>1991</item>
		<item>1990</item>
		<item>1989</item>
		<item>1988</item>
		<item>1987</item>
		<item>1986</item>
		<item>1985</item>
		<item>1984</item>
		<item>1983</item>
		<item>1982</item>
		<item>1981</item>
		<item>1980</item>
		<item>1979</item>
		<item>1978</item>
		<item>1977</item>
		<item>1976</item>
		<item>1975</item>
		<item>1974</item>
		<item>1973</item>
		<item>1972</item>
		<item>1971</item>
		<item>1970</item>
		<item>1969</item>
		<item>1968</item>
		<item>1967</item>
		<item>1966</item>
		<item>1965</item>
		<item>1964</item>
		<item>1963</item>
		<item>1962</item>
		<item>1961</item>
		<item>1960</item>
	</string-array>
	<!-- Notificacion -->
    <string name="notfytitle">Conectado a Punto Jalisco Abierto</string>
    <string name="notifytext">Ahora puedes navegar en internet ¡Gratis!</string>
    <string name="rutavoice">Hola, la ruta 368 ya esta aqui</string>
    
    
    <!-- Mensajes de error -->
    <string name="errordiaspin">Día de nacimiento invalido</string> 
    <string name="errormesspin">Mes de nacimiento invalido</string> 
    <string name="erroranospin">Año de nacimiento invalido</string>
    <string name="errordecarga">No es posible cargar la imagen</string>  
    <string name="errordebrowser">No hay un explorador instalado</string>
    <string name="erroraviso">Aún no aceptas el aviso de privacidad</string>
    
    <!-- aviso de privacidad -->
    <string name="aviso_etiqueta">Aviso de privacidad</string>
    <string name="aviso_aceptar">cerrar</string>    
    <string name="ayuda_auditiva">Activar ayuda auditiva</string>
    <string name="aviso_conformidad">He leído el contenido de este Aviso de Privacidad y consiento que mis Datos Personales que pudieran llegar a ser recabados y tratados, sean utilizados de conformidad con las finalidades contenidas en este documento.</string>    
    
	
</resources>
