<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/solidwhite">
    <ImageView 
        android:id="@+id/group_base_image"        
        android:layout_width="@dimen/listimagesize"
        android:layout_height="@dimen/listimagesize"
        android:contentDescription="@string/base"        
        android:paddingTop="4dp"  
        android:src="@drawable/base"/>    
    <TextView
        android:id="@+id/group_base_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingStart="@dimen/listleftpad"
        android:paddingRight="4dp"
        android:paddingEnd="4dp"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasizesmall"
        android:text="@string/base"        
        android:layout_toRightOf="@+id/group_base_image"
        android:layout_toEndOf="@+id/group_base_image"/>
    
    <TextView
        android:id="@+id/group_base_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingStart="@dimen/listleftpad"
        android:paddingRight="4dp"
        android:paddingEnd="4dp"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasize"
        android:text="@string/debujbase"        
        android:layout_toRightOf="@+id/group_base_image"
        android:layout_toEndOf="@+id/group_base_image"
        android:layout_below="@+id/group_base_label"/>

    <CheckBox
        android:id="@+id/group_default_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:enabled="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/ruta_preferente" />
    
    <ImageView 
        android:id="@+id/group_base_linea"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vacio"        
        android:paddingTop="@dimen/btpading"  
        android:src="@drawable/linea"  
        android:layout_below="@+id/group_base_image"/>  
    <!-- AQUI DIBUJO 1ER SALIDA -->
    <ImageView 
        android:id="@+id/group_salida1_image"        
        android:layout_width="@dimen/listimagesize"
        android:layout_height="@dimen/listimagesize"
        android:contentDescription="@string/salida1"        
        android:paddingTop="4dp"  
        android:src="@drawable/first"     
        android:scaleType="center"   
        android:layout_below="@+id/group_base_linea"/>    
    <TextView
        android:id="@+id/group_salida1_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingStart="@dimen/listleftpad"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasizesmall"
        android:text="@string/salida1"        
        android:layout_toRightOf="@+id/group_salida1_image"
        android:layout_toEndOf="@+id/group_salida1_image"
        android:layout_below="@+id/group_base_linea"/>
    
    <TextView
        android:id="@+id/group_salida1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingRight="4dp"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasize"
        android:text="@string/debujsalida1"        
        android:layout_toRightOf="@+id/group_salida1_image"
        android:layout_below="@+id/group_salida1_label"/>   
    <ImageView 
        android:id="@+id/group_salida1_linea"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vacio"        
        android:paddingTop="@dimen/btpading"  
        android:src="@drawable/linea"  
        android:layout_below="@+id/group_salida1_image"/>  
    <!-- AQUI DIBUJO ULTIMA SALIDA -->
    <ImageView 
        android:id="@+id/group_salidan_image"        
        android:layout_width="@dimen/listimagesize"
        android:layout_height="@dimen/listimagesize"
        android:contentDescription="@string/salidan"        
        android:paddingTop="4dp"  
        android:src="@drawable/last"     
        android:scaleType="center"   
        android:layout_below="@+id/group_salida1_linea"/>    
    <TextView
        android:id="@+id/group_salidan_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingRight="4dp"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasizesmall"
        android:text="@string/salidan"        
        android:layout_toRightOf="@+id/group_salidan_image"
        android:layout_below="@+id/group_salida1_linea"/>
    
    <TextView
        android:id="@+id/group_salidan_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingRight="4dp"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasize"
        android:text="@string/debujsalidan"        
        android:layout_toRightOf="@+id/group_salidan_image"
        android:layout_below="@+id/group_salidan_label"/>

    <ImageView 
        android:id="@+id/group_salidan_linea"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/vacio"        
        android:paddingTop="@dimen/btpading"  
        android:src="@drawable/linea"  
        android:layout_below="@+id/group_salidan_image"/>  
        <!-- AQUI DIBUJO la duracion de la vuelta -->
    <ImageView 
        android:id="@+id/group_duracion_image"        
        android:layout_width="@dimen/listimagesize"
        android:layout_height="@dimen/listimagesize"
        android:contentDescription="@string/duracion"        
        android:paddingTop="4dp"  
        android:src="@drawable/time"     
        android:scaleType="center"   
        android:layout_below="@+id/group_salidan_linea"/>    
    <TextView
        android:id="@+id/group_duracion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingRight="4dp"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasizesmall"
        android:text="@string/duracion"        
        android:layout_toRightOf="@+id/group_duracion_image"
        android:layout_below="@+id/group_salidan_linea"/>
    
    <TextView
        android:id="@+id/group_duracion_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/listleftpad"
        android:paddingRight="4dp"
        android:paddingTop="4dp"      
		android:textSize="@dimen/fontlistrutasize"
        android:text="@string/debujduracion"        
        android:layout_toRightOf="@+id/group_duracion_image"
        android:layout_below="@+id/group_duracion_label"/>

</RelativeLayout>